syntax = "proto3";

package cinema.v1;

option go_package = "github.com/cinemaos/backend/gen/cinema/v1;cinemav1";

import "cinema/v1/bookings.proto";

// Pricing Service
service PricingService {
  rpc CalculatePrice(CalculatePriceRequest) returns (CalculatePriceResponse);
  rpc ValidatePromoCode(ValidatePromoCodeRequest) returns (ValidatePromoCodeResponse);
}

message CalculatePriceRequest {
  string showtime_id = 1;
  repeated string seat_ids = 2;
  optional string promo_code = 3;
  optional string user_id = 4;
}

message CalculatePriceResponse {
  PriceBreakdown price_breakdown = 1;
}

message ValidatePromoCodeRequest {
  string code = 1;
  double subtotal = 2;
  string showtime_id = 3;
}

message ValidatePromoCodeResponse {
  bool valid = 1;
  string message = 2;
  optional Discount discount = 3;
}
